--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ html, body, ul {
     font-family: 'Open Sans', sans-serif;
 }
 
+p {
+    color: #0d0d0d;
+}
+
 ul {
     list-style: none;
 }
@@ -91,3 +95,184 @@ ul {
 .activate-notification {
     font-size: 13px;
 }
+
+/* search container */
+
+.search-container {
+    height: 50px;
+    width: 100%;
+    padding-left: 7.5px;
+    padding-top: 7.5px;
+    background-color: #F8F8F8;
+    position: relative;
+    color: #BDC1C3;
+    box-sizing: border-box;
+}
+
+#contact-search {
+    position: absolute;
+    left: 30px;
+    top: 18px;
+    font-size: 14px;
+}
+
+#search {
+    border: none;
+    height: 35px;
+    width: 385px;
+    padding-left: 60px;
+    border-radius: 17.5px;
+    background-color: #FFF;
+    box-sizing: border-box;
+}
+
+
+#search::placeholder {
+    colo:#BDC1C3;
+}
+
+/* contacts container */
+
+.contacts-container {
+    height: auto;
+    background-color: #FFF;
+}
+
+.contact-box {
+    cursor: pointer;
+    color: #FFF;
+    background-color: #FFF;
+    border-top: 1px solid #F2F2F2;
+    position: relative;
+    box-sizing: border-box;
+}
+
+.contact-box:last-child {
+    border-bottom: 1px solid F2F2F2;
+}
+
+.contact-box:houver {
+    background-color: #f4f5f2;
+}
+
+.active-chat {
+    background-color: #E9EBEB;
+}
+
+.active-chat.contact-box:houver {
+    background-color: #E9EBEB;
+}
+
+.contact-box .user-photo {
+    width: 50px;
+}
+
+.contact-box1 {
+    margin-bottom: 11px;
+}
+
+.user-info {
+    margin-left: 80px;
+    padding-top: 10px;
+    display: inline-block;
+}
+
+.user-info p, .message-info p {
+    margin: 0;
+}
+
+.user-name {
+    font-size: 16px;
+    color: #000;
+    margin-bottom: 12px;
+}
+
+.user-messagepreview {
+    font-size: 14px;
+    color: #454545;
+}
+
+.fa-check-double {
+    margin-right: 5px;
+    color: #4FC3F7;
+}
+
+.message-info {
+    position: absolute;
+    top: 12px;
+    right: 20px;
+    display: inline-block;
+}
+
+.message-info .message-time {
+    font-size: 12px;
+    margin-bottom: 5px;
+    color: #ccc;
+}
+
+.message-pending {
+    background-color: #09d261;
+    color: #FFF;
+    width: 19px;
+    height: 19px;
+    line-height: 19px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 50%;
+    text-align: center;
+    float: right;
+}
+
+/* chat  */
+
+.chat-container {
+    position: absolute;
+    top: 0
+    ;
+    left: 410px;
+    width: calc(100% - 410px);
+    height: 100%;
+    background-color: #CCC;
+}
+
+/* chat navbar */
+
+.chat-navbar {
+    height: 60px;
+    background-color: #EEE;
+    border-left: 1px solid #DDD;
+    padding-left: 75px;
+}
+
+.chat-navbar p {
+    margin: 0;
+}
+
+.contactinfo-container {
+    display: inline-block;
+}
+
+.contactinfo-container .user-name {
+    font-size: 16px;
+    height: 60px;
+    line-height: 60px;
+}
+
+.chattolls-container {
+    float: right;
+    display: inline-block;
+    height: 53px;
+    margin-top: 2px;
+    line-height: 60px;
+    margin-right: 20px;
+}
+
+.chattolls-container li {
+    display: inline-block;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 18px;
+    color: #80868A;
+    cursor: pointer;
+}
+
