--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@ ul {
 }
 
 .container {
-    height: 100vh;
-    position: relative;
+    height: 78vh;
 }
 
 .sidebar {
@@ -22,6 +21,7 @@ ul {
     height: 100%;
     display: inline-block;
     position: relative;
+    margin-left: -8px;
 }
 
 /* toolbar */
@@ -30,6 +30,7 @@ ul {
     width: 100%;
     height: 60px;
     background-color: #EEE;
+    margin-top: -8px;
 }
 
 .user-photo {
@@ -227,8 +228,7 @@ ul {
 
 .chat-container {
     position: absolute;
-    top: 0
-    ;
+    top: 0;
     left: 410px;
     width: calc(100% - 410px);
     height: 100%;
@@ -276,3 +276,109 @@ ul {
     cursor: pointer;
 }
 
+/* message */
+
+.messages-container {
+    background-color: #E1DAD2;
+    height: calc(100% - 120px);
+    position: relative;
+
+}
+
+.messasge-container p {
+margin: 0;
+}
+
+.bg-image {
+    background-image: url('../img/background_whats.png');
+    background-repeat: repeat;
+    opacity: .06;
+    width: 100%;
+    height: 100%;
+}
+
+.chat-messages {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    padding: 30px 80px;
+    box-sizing: border-box;
+}
+
+.chat-messages p{
+    display: block;
+    color: #262626;
+    font-size: 14px;
+    padding: 7px;
+    position: relative;
+    width: 200px;
+}
+
+.guest-message  {
+    background-color: #FFF;
+}
+
+.guest-message:before {
+    content: "";
+    width: 0;
+    height: 0;
+    border-bottom: 17px solid transparent;
+    border-right: 17px solid#FFF;
+    position: absolute;
+    top: 0;
+    left: -10px;
+}
+
+.user-message {
+    background-color: #dcf8c6;
+    float: right;
+}
+
+.user-message:after {
+    content: "";
+    width: 0;
+    height: 0;
+    border-bottom: 17px solid transparent;
+    border-left: 17px solid #dcf8c6;
+    position: absolute;
+    top: 0;
+    right: -10px;
+}
+
+/* snemessage-container */
+
+.sendmessage-container {
+    background-color: #EFEFEF;
+    border-left: 1px solid #DDD;
+    height: 60pzx;
+    padding-left: 20px;
+    padding-right: 20px;
+    position: relative;
+}
+
+#chatmessage {
+    
+    top: 10px;
+    left: 60px;
+    background-color: #FFF;
+    border: none;
+    height: 40px;
+    border-radius: 20px;
+    padding-left: 20px;
+    font-size: 16px;
+    width: 1378px;
+}
+
+.sendmessage-container i {
+    font-size: 24px;
+    color: #80868A;
+    cursor: pointer;
+    height: 60px;
+    line-height: 60px;
+}
+
+.fa-microphone {
+    float: right;
+}
